* Image value enhancements for Image type data points
* Log4j upgraded to Version 2 for increased performance and lower memory use
* Jetty upgrade to 9.3.11
* Spring Core upgrade to 4.3.7
* H2 Database now case sensitive
* New Module Download Level to allow access to 'Development' and early release modules.  See the System Information area on the System Settingg page.

*Version 3.0.0
* Beta release for Evaluation and Testing of new UI

*Version 2.8.6*
* Fix to ensure publishers are not saved with previously deleted data points

*Version 2.8.4*
* Fixing bug in publisher saving
* Adding validation to publisher snapshot period type
* Added templates, virtual serial ports and jsonData to json backups
* Touched up UI for templates on edit data point page
* Fix for json import task importing new core components depending on new module components

*Version 2.8.2*
* Adding 'cancel' button for upgrades.
* Bugfix for failing first database backup on Windows machines
* Fix to allow deleting empty Point Hierarchy folders whilst editing
* Upgrade advanced settings are displayed by default now

*Version 2.8.0*
* Upgrade core-private for new login process
* Adding runtime.javascript.metrics. env property to log javascript execution times of the ScriptEngine
* Modularize Event Detectors
* Modularize Event Handlers
* User passwords upgraded
* Adding new publish type of Logged only, where only values saved to the database are published
* Improved aborted poll handling, will only raise 1 event on the first aborted poll and only log the count every 5 minutes
* Display aborted polls on data source edit page
* Allow publicly available JSON data into the JSON data store
* Improved Rejected task logging with real names of most aborted tasks.
* Adding query timing logging via db.useMetrics env property
* Adding MySQL Backup/Restore ability
* Adding indexes to data points table for performance
* No longer indenting JSON output from REST api, use rest.indentJSON=true env property to enable