@@ -1787,6 +1787,7 @@ validate.pointWrontType=Point is wrong type
 validate.invalidReference=Invalid XID Reference
 validate.incompatibleDataSourceType=Data Source Type Incompatible
 validate.invalidPermission=Cannot add permission that you do not already have: {0}
+validate.mustHaveEditPermission=Must retain edit permission
 validate.greaterThan=Must be greater than {0}
 validate.greaterThanOrEqualTo=Must be greater than or equal to {0}
 validate.lessThan=Must be less than {0}
