@@ -26,6 +26,7 @@
 * Spring Core upgrade to 4.3.7
 * H2 Database now case sensitive
 * New Module Download Level to allow access to 'Development' and early release modules.  See the System Information area on the System Settingg page.
+* Prevent saving a data source if the user saving doesn't have permissions after the source is saved.
 
 *Version 3.0.0
 * Beta release for Evaluation and Testing of new UI
